--- a/Nexcent Landing Page/src/App.css
+++ b/Nexcent Landing Page/src/App.css
@@ -1,6 +1,6 @@
 nav {
   justify-content: space-between;
-  padding: 2em 4em;
+  padding: 2em 5em;
   background-color: #f5f7fa;
   display: flex;
   align-items: center;
@@ -102,7 +102,7 @@ nav {
   margin-top: 2vh;
 }
 
-.clientHeading {
+.headingTextSize {
   font-size: 2em;
   font-weight: 600;
 }
@@ -125,6 +125,54 @@ nav {
 
 .demoSection button {
   display: flex;
+}
+
+.suitableSection {
+  padding: 0em 5em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.SuitableSectionText {
+  margin-bottom: 2em;
+  width: 25vw;
+}
+
+.bottomGap {
+  margin-bottom: 1.5vh;
+}
+
+.suitableCardContainer {
+  display: flex;
+  gap: 8em;
+}
+
+.suitableCard {
+  box-shadow: 0px 3px 3px rgba(182, 182, 182, 0.3);
+  border-radius: 10px;
+  padding: 2em;
+  width: 15vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 1em;
+}
+
+.detailsSection {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2em 5em;
+  gap: 5vw;
+}
+
+.detailsSection div {
+  width: 28vw;
 }
 
 footer {
