--- a/Nexcent Landing Page/src/App.css
+++ b/Nexcent Landing Page/src/App.css
@@ -1,1 +1,18 @@
+.dot {
+  position: absolute;
+  bottom: 5%;
+  right: 50%;
+  animation: pointdown 1000ms infinite;
+}
 
+@keyframes pointdown {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(16px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
